--- a/ProjektNYYYZealand/Pages/HoldPage/GetHold.cshtml
+++ b/ProjektNYYYZealand/Pages/HoldPage/GetHold.cshtml
@@ -2,7 +2,7 @@
 @model ProjektNYYYZealand.Pages.HoldPage.GetHoldsModel
 @{
     
-    ViewData["Titel"] = "GetHolds";
+    ViewData["Titel"] = "GetHold";
 
 }
 
@@ -42,7 +42,7 @@
 
 
 
-<table class=" tabel">
+<table class=" table-bordered">
 
     <thead>
 
@@ -122,4 +122,3 @@
 
 
 </table>
-}
