--- a/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
+++ b/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ProjektNYYYZealand</title>
+    <title>@ViewData["Title"] - Bogliste System</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -34,10 +34,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/UnderviserPage/GetUnderviser">Undervisere</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BogHoldPage/GetBogHold">BogHold</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/BogHoldPage/GetBogHoldPage">BogHold</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/UnderviserHoldPage/GetUnderviserHold">UnderviserHold</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UndervisereHoldPage/UnderviserHoldPage">UndervisereHold</a>
                         </li>
                     </ul>
                 </div>
