--- a/ProjektNYYYZealand/Pages/BogPage/UpdateBog.cshtml
+++ b/ProjektNYYYZealand/Pages/BogPage/UpdateBog.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ProjektNYYYZealand.Pages.BogPage.CreateBogModel
+@model ProjektNYYYZealand.Pages.BogPage.UpdateBogModel
 @{
     ViewData["Title"] = "Create Bog ";
 }
@@ -11,7 +11,6 @@
             <div asp-validation-summary="  ModelOnly  " class="text-danger">
             </div>
             <div class="form-group">
-                @Model.Error"
                 <label asp-for="@Model.bog.BogId" class="control-label"></label>
                 <input asp-for="@Model.bog.BogId" class="form-control" />
                 <span asp-validation-for="@Model.bog.BogId" class="text-danger"></span>
@@ -41,7 +40,7 @@
 
    
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
     </form>
 </div>
