--- a/ProjektNYYYZealand/Pages/UnderviserPage/GetUnderviser.cshtml
+++ b/ProjektNYYYZealand/Pages/UnderviserPage/GetUnderviser.cshtml
@@ -11,18 +11,8 @@
 <form>
 
     <p>
-
-
-
-        Name <input type="text" asp-for="Name" />
-
-
-        <input type="submit" value="Søg her" />
-
-
-
-
-
+        Name <input type="text" asp-for="Name" />                                                                                     
+        <input type="submit" value="Søg " />
     </p>
 
 </form>
@@ -39,7 +29,7 @@
 
 
 
-<table class=" tabel">
+<table class="table-bordered">
 
     <thead>
 
