--- a/ProjektNYYYZealand/wwwroot/css/site.css
+++ b/ProjektNYYYZealand/wwwroot/css/site.css
@@ -9,19 +9,19 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #ffd800;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
+  color: #b200ff;
+  background-color: #b200ff;
   border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #b200ff;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
