--- a/ProjektNYYYZealand/Pages/BogHoldPage/GetBogHoldPage.cshtml
+++ b/ProjektNYYYZealand/Pages/BogHoldPage/GetBogHoldPage.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Titel"] = " BogHold";
 }
-<p class="btn btn-dark" style="background-color:blue">
+<p class="btn btn-dark" style="background-color:gold">
 
     <a asp-page="/BogHoldPage/CreateBogHold" style="color:aliceblue">Opret et nyt BogHold</a>
 
