--- a/ProjektNYYYZealand/Pages/BogPage/GetBøger.cshtml
+++ b/ProjektNYYYZealand/Pages/BogPage/GetBøger.cshtml
@@ -27,7 +27,7 @@
 <p>
 
     <a asp-page="/BogPage/CreateBog">Opret en ny Bog</a>
-
+    
 </p>
 
 
@@ -36,7 +36,7 @@
 
 
 
-<table class=" table-bordered">
+<table class=" table-bordered table-dark border-dark">
 
     <thead>
 
@@ -89,7 +89,7 @@
                         <p>
 
                             <a asp-page="/BogPage/DeleteBog" asp-route-id="@item.BogId">Slet </a>
-
+                        
                         </p>
 
                     </td>
