--- a/ProjektNYYYZealand/Pages/Index.cshtml
+++ b/ProjektNYYYZealand/Pages/Index.cshtml
@@ -4,28 +4,19 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Velkommen til Bogliste Systemet</h1>
-    <p>Tryk her <a href="https://www.zealand.dk/">for at henvende dig til Zealand</a>.</p>
+<div class="text-center text-dark">
+    <h1 class="display-4 text-black-90">Velkommen til Bogliste Systemet</h1>
+   @* <p>Tryk her <a href="https://www.zealand.dk/">for at henvende dig til Zealand</a></p>*@
 </div>
 <!DOCTYPE html>
 <html>
 <head>
     <title>Title of the document</title>
 </head>
-<body style="background-color:lightgoldenrodyellow;">
-    <h1>Bogliste Systemet</h1>
+<body style="background-color:gold;">
+    @*<h1>Bogliste Systemet</h1>*@
     <p>
         Velkommen til Zealands Bogliste System - Dine muligheder ligger i menuen.
-        
-        
     </p>
 </body>
-</html>
-
-<html>
-<body>
-    <img src="https://www.autoawards.dk/wp-content/uploads/2022/11/Zealand.png" height="50" width="50" center>
-</body>
-
 </html>
