--- a/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
+++ b/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body style="background-color:yellow;">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Boglistesystem</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">
+                    <img src="https://www.autoawards.dk/wp-content/uploads/2022/11/Zealand.png" height="40" width="40" class="img-thumbnail" />
+                    Boglistesystem
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,25 +22,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BogPage/GetBøger">Bøger</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/BogPage/GetBøger">Bøger</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/HoldPage/GetHold">Hold</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/HoldPage/GetHold">Hold</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/UnderviserPage/GetUnderviser">Undervisere</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/UnderviserPage/GetUnderviser">Undervisere</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BogHoldPage/GetBogHoldPage">BogHold</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/BogHoldPage/GetBogHoldPage">BogHold</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/UndervisereHoldPage/UnderviserHoldPage">UndervisereHold</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/UndervisereHoldPage/UnderviserHoldPage">UnderviserHold</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +53,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-black-60 border-bottom">
         <div class="container">
             &copy; 2022 - Boglistesystem - Kontakt os: +45 50762600 - Mail: roskilde@zealand.dk - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
