--- a/ProjektNYYYZealand/Pages/UndervisereHoldPage/UnderviserHoldPage.cshtml
+++ b/ProjektNYYYZealand/Pages/UndervisereHoldPage/UnderviserHoldPage.cshtml
@@ -12,7 +12,7 @@
 
 <h1> Liste over underviserehold</h1>
 
-<table class=" table-bordered">
+<table class="table-bordered table-dark border-dark">
 
     <thead>
 
