--- a/ProjektNYYYZealand/Pages/BogHoldPage/GetBogHoldPage.cshtml
+++ b/ProjektNYYYZealand/Pages/BogHoldPage/GetBogHoldPage.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Titel"] = " BogHold";
 }
-<p class="btn btn-dark" style="background-color:gold">
+<p class="btn btn-dark">
 
-    <a asp-page="/BogHoldPage/CreateBogHold" style="color:aliceblue">Opret et nyt BogHold</a>
+    <a asp-page="/BogHoldPage/CreateBogHold" >Opret et nyt BogHold</a>
 
 </p>
 
@@ -15,7 +15,7 @@
 
 
 
-<table class=" table-bordered">
+<table class=" table-bordered table-dark border-dark btn btn-dark">
 
     <thead>
 
