--- a/ProjektNYYYZealand/Pages/BogPage/GetBøger.cshtml
+++ b/ProjektNYYYZealand/Pages/BogPage/GetBøger.cshtml
@@ -18,13 +18,14 @@
 
         ISBN <input type="text" asp-for="ISBN" />
 
+        
         <input type="submit" value="Søg her" />
 
     </p>
 
 </form>
 
-<p>
+<p class="btn btn-dark">
 
     <a asp-page="/BogPage/CreateBog">Opret en ny Bog</a>
     
@@ -36,7 +37,7 @@
 
 
 
-<table class=" table-bordered table-dark border-dark">
+<table class=" table-bordered table-dark border-dark btn btn-dark">
 
     <thead>
 
