--- a/ProjektNYYYZealand/Pages/HoldPage/GetHold.cshtml
+++ b/ProjektNYYYZealand/Pages/HoldPage/GetHold.cshtml
@@ -30,7 +30,7 @@
 
 </form>
 
-<p>
+<p class="btn btn-dark">
 
     <a asp-page="/HoldPage/CreateHold">Opret et nyt hold</a>
 
@@ -42,7 +42,7 @@
 
 
 
-<table class=" table-bordered">
+<table class=" table-bordered table-dark border-dark btn btn-dark">
 
     <thead>
 
