--- a/ProjektNYYYZealand/Pages/Index.cshtml
+++ b/ProjektNYYYZealand/Pages/Index.cshtml
@@ -4,19 +4,31 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center text-dark">
-    <h1 class="display-4 text-black-90">Velkommen til Bogliste Systemet</h1>
-   @* <p>Tryk her <a href="https://www.zealand.dk/">for at henvende dig til Zealand</a></p>*@
+<div style="color:black; font-family:Dubai" class="text-center text-black-100 ">
+    <h1 class="display-4 text-black-100">Velkommen til Bogliste Systemet</h1>
+    <button class="btn btn-dark" style ="color:black;"><a href="https://www.zealand.dk/">Henvend dig til Zealands side</a></button>
 </div>
 <!DOCTYPE html>
 <html>
 <head>
     <title>Title of the document</title>
 </head>
-<body style="background-color:gold;">
+<body  style="background-color:gold;">
     @*<h1>Bogliste Systemet</h1>*@
-    <p>
-        Velkommen til Zealands Bogliste System - Dine muligheder ligger i menuen.
+    <p>f
+        @*Underrublik*@
     </p>
+    @*Front page*@
+    <div><img src="https://cdn.kastatic.org/images/lohp/personalized_learning_icon.png" alt="">
+        </div>
+        <h3>Dine muligheder ligger i menuen!</h3>
+        <span>Hej! Opret, slet og opdater når som helst i menuen foroven.</span>
+        <div><img src="https://cdn.kastatic.org/images/lohp/trusted_content_icon.png" alt=""></div>
+        <h3>Trusted content</h3>
+        <span>Lavet af tre studerende på Zealand. Can Taylahan, Renas Sari & Yusaf Sheikh.</span>
+        <div><img src="https://cdn.kastatic.org/images/lohp/empower_teachers_icon.png" alt=""></div>
+        <h3>Nemt & Hurtigt!</h3>
+        <span>Med Zealands nye bogliste system, har det aldrig været hurtigere!</span>
+
 </body>
 </html>
