--- a/ProjektNYYYZealand/Pages/Privacy.cshtml
+++ b/ProjektNYYYZealand/Pages/Privacy.cshtml
@@ -1,8 +1,19 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Vi er en gruppe 3 unge mænd, der har lavet en projektopgave. I vores opgave har vi valgt at lave et boglistesystem til Zealand. I følgende rapport har vi demonstreret og illustreret hvad vores mål og mission er, og vist hvordan vi vil opnå det. Vi vil starte med at fremlægge vores virksomhedsanalyse, hvor vi har gennemgået en masse slags modeller, som f.eks. Business Model Canvas, SWOT-analyse og hele vores inception deck. Vi har beskrevet og gået i dybden med at fortælle hvordan og hvad der skal ske. Efterfølgende har vi gennemgået vores sprint, og så gennemgår vi vores klassediagrammer, domain modeller og sekvens modeller. I vores sprint kigger vi også på noget kode, og prøver så godt som muligt at beskrive hvad vi har gjort og hvordan det kommer til at virke.
+</p>
+<p>
+    Følg Zealand på sociale medier:
+</p>
+<ul>
+    <li><a class="btn btn-dark btn-outline-warning btn" href="https://www.facebook.com/zealandacademy/">Facebook</a> </li>
+    <li><a class="btn btn-dark btn-outline-warning btn" href="https://www.instagram.com/zealand_academy/">Instagram</a> </li>
+    <li><a class="btn btn-dark btn-outline-warning btn" href="https://www.linkedin.com/school/zealand-sj%C3%A6llands-erhvervsakademi/">LinkedIn</a> </li>
+    <li><a class="btn btn-dark btn-outline-warning btn" href="https://www.youtube.com/channel/UCtGaG8qWqKfke9BJrumAoig?">Youtube</a> </li>
+    <li><a class="btn btn-dark btn-outline-warning btn" href="https://twitter.com/ZealandAcademy">Twitter</a> </li>
+</ul>
