--- a/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
+++ b/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body style="background-color:yellow;">
+<body style="background-color:#ffff66; color:black; font-family:Dubai">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
@@ -53,9 +53,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-black-60 border-bottom">
+    <footer style="background-color: #ffff80" class="border-top footer text-black-60 border-bottom">
         <div class="container">
-            &copy; 2022 - Boglistesystem - Kontakt os: +45 50762600 - Mail: roskilde@zealand.dk - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - Boglistesystem - Kontakt os: +45 50762600 - Mail: roskilde@zealand.dk - <a asp-area="" asp-page="/Privacy">Learn more About Us</a>
         </div>
     </footer>
 
