--- a/ProjektNYYYZealand/Pages/UnderviserPage/GetUnderviser.cshtml
+++ b/ProjektNYYYZealand/Pages/UnderviserPage/GetUnderviser.cshtml
@@ -17,7 +17,7 @@
 
 </form>
 
-<p>
+<p class="btn btn-dark" >
 
     <a asp-page="/UnderviserPage/CreateUnderviser">Tilføj en ny underviser</a>
 
@@ -29,7 +29,7 @@
 
 
 
-<table class="table-bordered">
+<table class=" table-bordered table-dark border-dark btn btn-dark">
 
     <thead>
 
@@ -43,7 +43,7 @@
 
             <th>Email</th>
 
-            <th>Billede</th>
+
 
         </tr>
 
