--- a/ProjektNYYYZealand/Pages/BogHoldPage/CreateBogHold.cshtml
+++ b/ProjektNYYYZealand/Pages/BogHoldPage/CreateBogHold.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="  ModelOnly  " class="text-danger">
+            <div asp-validation-summary="  ModelOnly  " class="text-dark">
             </div>
             <div class="form-group">
                 <label asp-for="@Model.bogHold.BogHoldId" class="control-label"></label>
@@ -30,7 +30,7 @@
 
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-light btn-outline-dark" />
             </div>
         </form>
     </div>
