--- a/ProjektNYYYZealand/Pages/BogHoldPage/DeleteBogHold.cshtml
+++ b/ProjektNYYYZealand/Pages/BogHoldPage/DeleteBogHold.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete BogHold ";
 }
 
-<h1>Delete UnderviserHold</h1>
+<h1>Delete Boghold</h1>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <form method="post">
@@ -20,7 +20,7 @@
             </dd>
 
         </dl>
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" value="Delete" class="btn btn-dark" />
     </form>
     <div>
         <a asp-page="GetBogHoldPage">Tilbage</a>
