--- a/ProjektNYYYZealand/Pages/BogPage/CreateBog.cshtml
+++ b/ProjektNYYYZealand/Pages/BogPage/CreateBog.cshtml
@@ -41,7 +41,7 @@
 
    
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class=" btn btn-light btn-outline-dark" />
             </div>
     </form>
 </div>
