--- a/ProjektNYYYZealand/Pages/HoldPage/CreateHold.cshtml
+++ b/ProjektNYYYZealand/Pages/HoldPage/CreateHold.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="@Model.hold.Uddannelse" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-light btn-outline-dark" />
             </div>
         </form>
     </div>
