--- a/ProjektNYYYZealand/Pages/UnderviserPage/CreateUnderviser.cshtml
+++ b/ProjektNYYYZealand/Pages/UnderviserPage/CreateUnderviser.cshtml
@@ -34,7 +34,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-light btn-outline-dark" />
             </div>
         </form>
     </div>
