--- a/ProjektNYYYZealand/Pages/UnderviserPage/DeleteUnderviser.cshtml
+++ b/ProjektNYYYZealand/Pages/UnderviserPage/DeleteUnderviser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete Bog ";
 }
 
-<h1>Delete Bog</h1>
+<h1>Delete underviser</h1>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <form method="post">
