--- a/ProjektNYYYZealand/Pages/UndervisereHoldPage/CreateUnderviserHold.cshtml
+++ b/ProjektNYYYZealand/Pages/UndervisereHoldPage/CreateUnderviserHold.cshtml
@@ -30,7 +30,8 @@
 
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+               @* Create button color*@
+                <input type="submit" value="Create" class="btn btn-light btn-outline-dark" />
             </div>
         </form>
     </div>  
