--- a/ProjektNYYYZealand/Pages/UndervisereHoldPage/UnderviserHoldPage.cshtml
+++ b/ProjektNYYYZealand/Pages/UndervisereHoldPage/UnderviserHoldPage.cshtml
@@ -4,7 +4,7 @@
 
     ViewData["Titel"] = "GetUnderviserHold";
 }
-<p>
+<p class="btn btn-dark">
 
     <a asp-page="/UndervisereHoldPage/CreateUnderviserHold">Opret et nyt underviserehold</a>
 
@@ -12,7 +12,7 @@
 
 <h1> Liste over underviserehold</h1>
 
-<table class="table-bordered table-dark border-dark">
+<table class=" table-bordered table-dark border-dark btn btn-dark">
 
     <thead>
 
