--- a/ProjektNYYYZealand/Pages/BogPage/UpdateBog.cshtml
+++ b/ProjektNYYYZealand/Pages/BogPage/UpdateBog.cshtml
@@ -40,7 +40,7 @@
 
    
             <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-dark" />
             </div>
     </form>
 </div>
