--- a/ProjektNYYYZealand/Pages/UnderviserPage/UpdateUnderviser.cshtml
+++ b/ProjektNYYYZealand/Pages/UnderviserPage/UpdateUnderviser.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="@Model.underviser.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-dark" />
             </div>
         </form>
     </div>
