--- a/ProjektNYYYZealand/Pages/Index.cshtml
+++ b/ProjektNYYYZealand/Pages/Index.cshtml
@@ -19,7 +19,7 @@
         @*Underrublik*@
     </p>
     @*Front page*@
-    <div><img src="https://cdn.kastatic.org/images/lohp/personalized_learning_icon.png" alt="">
+    <div class="align-content-center"><img src="https://cdn.kastatic.org/images/lohp/personalized_learning_icon.png" alt="">
         </div>
         <h3>Dine muligheder ligger i menuen!</h3>
         <span>Hej! Opret, slet og opdater når som helst i menuen foroven.</span>
