--- a/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
+++ b/ProjektNYYYZealand/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="mr-2"
+                <div class="mr-2">
                 <partial name="_LoginStatusPartial" />
                </div>
             </div>
