--- a/ProjektNYYYZealand/Pages/Shared/_LoginStatusPartial.cshtml
+++ b/ProjektNYYYZealand/Pages/Shared/_LoginStatusPartial.cshtml
@@ -3,10 +3,10 @@
 {
     <form method="post" class="form-inline" asp-page="/Account/Logout">
         Welcome @User.Identity.Name
-        <button type="submit" class="ml-2 btn btn-dark">Logout</button>
+        <button type="submit" class="ml-2 btn btn-dark btn-link">Logout</button> 
     </form>
 }
 else 
 {
-    <a class="btn btn-dark" asp-page="/Account/Login">Login</a>
+    <a class="btn btn-dark btn-link" asp-page="/Account/Login">Login</a>
 }
